--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "start": "webpack-dev-server --open --mode development"
   },
   "keywords": [],
-  "author": "",
+  "author": "abigail boyer",
   "license": "ISC",
   "devDependencies": {
     "@babel/core": "^7.1.6",
