--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "webpack-dev-server": "^3.1.10"
   },
   "dependencies": {
+    "bootstrap": "^4.3.1",
+    "react-bootstrap": "^1.0.0-beta.8",
     "react-router-dom": "^5.0.0"
   }
 }
